infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: payment-app
spec:
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
