infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  namespace: payment-app
  annotations:
    # Rewrite removido
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /payments
        pathType: Prefix
        backend:  
          service:
            name: payment-service
            port:
              number: 8080
      - path: /webhook
        pathType: Prefix
        backend:  
          service:
            name: payment-service
            port:
              number: 8080
      - path: /mock
        pathType: Prefix
        backend:  
          service:
            name: payment-service
            port:
              number: 8080
